--- a/animation-svg/styles.css
+++ b/animation-svg/styles.css
@@ -10,6 +10,7 @@
 }
 
 .iconsvg { width: 20%; }
+.iconsvg svg { overflow: hidden; }
 
 .icon-color-stroke {
     fill: none;
@@ -32,7 +33,8 @@
 /**
  * Animation Eolienne
  **/
-.iconsvg-eolienne:hover .pale {
+.iconsvg-eolienne:hover svg .pale {
+    transform-origin: 22.7px 25.6px;
     animation-name: eolienne;
     animation-duration: 1.5s;
     animation-iteration-count: infinite;
@@ -131,21 +133,30 @@
 }
 
 .iconsvg-poumons:hover .poumon {
-    /*stroke-dasharray: 200;
-    stroke-dashoffset: 200;*/
     animation: poumon .8s ease-in-out;
     animation-iteration-count: infinite;
     animation-direction: alternate;
     transform-origin: 50% 60%; 
 }
 
+.iconsvg-rollers:hover svg {
+    animation: move 1s infinite ease-in-out;
+}
+
+.iconsvg-solidarite:hover .mains {
+    stroke-dasharray: 200;
+    stroke-dashoffset: 200;
+    fill: transparent;
+    animation: mains 1.5s linear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+
 @keyframes eolienne {
     0% {
-        transform-origin: center;
         transform: rotate(0deg);
     }
     100% {
-        transform-origin: center;
         transform: rotate(360deg);
     }
 }
@@ -196,7 +207,7 @@
     }
     75% {
         transform-origin: 43px 60px;
-        transform: rotate(5rdeg);        
+        transform: rotate(5deg);
     }
     100% {
         transform-origin: 43px 60px;
@@ -254,6 +265,23 @@
 @keyframes poumon {
     to {
         transform: scale(1.07);       
+    }
+}
+
+@keyframes move {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: translate(200px, 0);
+    }
+}
+
+@keyframes mains {
+    to {
+        stroke-dashoffset: 0;
+        fill: var(--color-secondary);
     }
 }
 
