--- a/animation-svg/styles.css
+++ b/animation-svg/styles.css
@@ -3,14 +3,27 @@
     --color-secondary: #C9D04E;
 }
 
+body {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+/**
+ * SVG animations
+ **/
 .icon-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
 }
 
-.iconsvg { width: 20%; }
+.iconsvg {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 100px;
+}
 .iconsvg svg { overflow: hidden; }
+.iconsvg span { text-align: center; }
 
 .icon-color-stroke {
     fill: none;
